moved some css to be more readable and in the correct spot

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -127,9 +127,6 @@ ol li {
         max-height: 0px;
         transition: max-height .2s ease-out;
     }
-    menu#social li {
-        font-size: 20px;
-    }
     menu li {
         list-style-type: none;
         text-align: center;
@@ -365,6 +362,7 @@ ol li {
         display: block;
         flex-direction: column;
         align-content: center;
+        font-size: 20px;
     }
     ul#social li a {
         text-decoration: none;
